--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
   <link type="text/css" rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Oxanium:400,500,600,700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <header>
